# OPI-8

./: .gitignore  CMakeLists.txt  main.cpp
.github/: ci-configuration.yml
.github/workflows/: ci-configuration.yml
Lib/: game.cpp
lib/: game.hpp
